--- a/src/components/styles/UserForm.css
+++ b/src/components/styles/UserForm.css
@@ -2,8 +2,24 @@ body{
     /* background-color: grey; */
 }
 
-.form-steps-small{
-    
+.menu-bar{
+    width: 100%;
+    height: 100px;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.logo-container{
+    width: 100px;
+    height: 100px;
+    background: url('CDF-Logo.jpg');
+    background-repeat: no-repeat;
+    background-size: 90px 90px;
+}
+
+.title-container{
+    margin-top: -75px;
+    padding-bottom: 10px;
 }
 
 /* .form-container{
@@ -17,9 +33,9 @@ body{
     position: sticky;
     z-index: 1000;
     margin-bottom: 20px;
-    box-shadow: 0px 4px 5px 3px rgba(0,0,0,0.48);
-    -webkit-box-shadow: 0px 4px 5px 3px rgba(0,0,0,0.48);
-    -moz-box-shadow: 0px 4px 5px 3px rgba(0,0,0,0.48);
+    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.48);
+    -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.48);
+    -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.48);
 }
 
 .form-body{
